# rappy

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: build.yml  npm_publish.yml  release.yml  rust-ci.yml
hello/: package.json
npm/: download.js  install.js
npm-package/: README.md  package.json
src/: cli.rs  constant.rs  git.rs  install_packages.rs  main.rs  scafold_contract.rs  scafold_foundry.rs  scafold_hardhat.rs  scafold_project.rs
src/installers/: app_router.rs  dependency_versions.rs  hardhat_prettier.rs  installer.rs  mod.rs  tailwind.rs
src/utils/: add_package_dependency.rs  add_scripts.rs  copy_file.rs  get_theme.rs  install_packages.rs  logger.rs  mod.rs  package_json.rs  packages.rs  path.rs  rename_project.rs  select_boiler_plate.rs
template/extras/src/: index.module.css
template/extras/src/app/layout/: base.tsx
template/extras/src/app/page/: base.tsx
template/extras/src/pages/index/: with-tw.tsx
template/foundry/: package.json
template/hardhat/: package.json
template/root/: README.md  package.json
