[package]
name = "rappy"
version = "0.1.0"
edition = "2021"

[dependencies]
owo-colors = "3"
regex = "1.11.1"
console = "0.15.10"
dialoguer = "0.11.0"
anyhow = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
indexmap = { version = "2.7.0", features = ["serde"] }
semver = "1.0.24"
